--- a/ELEMENTS/css/mainstyle.css
+++ b/ELEMENTS/css/mainstyle.css
@@ -89,7 +89,6 @@ content {
   height: 90%;
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-wrap: wrap;
 }
 .mainContentBox {
@@ -101,6 +100,7 @@ content {
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
+  flex-shrink: 1 0 auto;
 }
 footer {
   position: fixed;
