--- a/dat504final-master/src/css/index.css
+++ b/dat504final-master/src/css/index.css
@@ -58,6 +58,25 @@ body {
 .addFormBoxTitle {
   padding: 5px;
   font-size: 12px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+}
+
+#washInfoButton {
+  padding-left: 5px;
+}
+
+#washInfo {
+  margin-left: 80px;
+  visibility: hidden;
+  color: green;
+  position: fixed;
+}
+
+#washInfoButton:hover + #washInfo {
+  visibility: visible;
 }
 
 #indexSubmitButton {
@@ -93,36 +112,30 @@ body {
 }
 
 #userInputWash{
-  -webkit-padding-start: 3px;
-  -moz-padding-start: 3px;
-  border: 2px solid Black;
-  font-weight: bold;
-  font-size: 14px;
-  width: 417px;
-  float: left;
+  -webkit-padding-start: 5px;
+  -moz-padding-start: 5px;
+  width: 406px;
   }
 
-  #reactBtn{
-    margin-left: 1%;
+  .reactBtn{
     border: 2px solid Black;
     font-weight: bold;
     font-size: 8px;
     text-align: center;
     height: 19px;
+    width:200px;
   }
-
-#addCountButtonCont{
+  #reactBtn1:hover {
+    background-color: black;
+    color: #eee;
+  }
+  #reactBtn2:hover {
+    background-color: black;
+    color: #eee;
+  }
+#addCountButtonCont {
   display: flex;
-  flex-flow: row;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-}
-
-.addCountButton1{
-  width:200px
-}
-
-.addCountButton2{
-  width:200px
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 5px;
 }
